--- a/verkkokauppa/templates/verkkokauppa/product.html
+++ b/verkkokauppa/templates/verkkokauppa/product.html
@@ -28,4 +28,7 @@
             <li>Arvosteluja ei ole lisätty.</li>
         {% endfor %}
     </ul>
+
+    <a href="{% url 'verkkokauppa:add_review' product.id %}">Arvostele tuote</a>
+
 {% endblock content %}
