--- a/verkkokauppa/templates/verkkokauppa/home.html
+++ b/verkkokauppa/templates/verkkokauppa/home.html
@@ -3,7 +3,10 @@
 {% block content %}
 
 
+<h2> Tervetuloa verkkokauppaan! </h2>
 
-<p> Tervetuloa verkkokauppaan! </p>
+
+
+<p class="favourite-text">Suositut<p>
 
 {% endblock content %}
