--- a/verkkokauppa/templates/verkkokauppa/base.html
+++ b/verkkokauppa/templates/verkkokauppa/base.html
@@ -6,34 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Klikkauskauppa</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-    <div class="wrapper">
+    <div class="website">
         <header class="main-header">
             <div class="header-top">
                 <div class="logo-container">
                     <a class="logo" href="{% url 'verkkokauppa:home' %}">
-                        <img src="{% static 'images/Logo.png' %}" alt="Klikkauskauppa Logo">
+                        <h1>KLIKKAUSKAUPPA</h1>
                     </a>
-                </div>
                 <div class="search-container">
                     <input class="search" type="text" placeholder="Hae tuotteita...">
+                    <button class="search-button">Hae</button>
                 </div>
             </div>
             <nav>
                 <ul class="main-nav">
                     <li><a href="{% url 'verkkokauppa:home' %}" class="nav-link">Etusivu</a></li>
-                    <li><a href="{% url 'verkkokauppa:products' %}" class="nav-link">Tuotteet</a><li>
+                    <li><a href="{% url 'verkkokauppa:products' %}" class="nav-link">Tuotteet</a></li>
                     <li><a href="{% url 'verkkokauppa:info' %}" class="nav-link">Tietoa meistä</a></li>
-                    <li><a href=# class="nav-link">Ostoskori</a></li>
+                    <li><a href="#" class="nav-link">Ostoskori</a></li>
 
                     {% if user.is_authenticated %}
-                        <li><span>Hello, {{ user.username }}!</span></li>
-                        <li><a href="{% url 'users:logout' %}" class="nav-link">Kirjaudu ulos</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="nav-link dropdown-toggle">Hello, {{ user.username }}!</a>
+                            <div class="dropdown-menu">
+                                <a href="{% url 'users:profile' %}" class="dropdown-item">Profiili</a>
+                                <a href="{% url 'users:logout' %}" class="dropdown-item">Kirjaudu ulos</a>
+                        </li>
                     {% else %}
                         <li><a href="{% url 'users:login' %}" class="nav-link">Kirjaudu sisään</a></li>
                     {% endif %}
-
                 </ul>
             </nav>
         </header>
@@ -43,6 +48,17 @@
     </div>
     <footer class="main-footer">
         <p>2024 www.Klikkauskauppa.fi</p>
+        <div class="footer-links">
+            <a href="https://facebook.com/klikkauskauppa" target="_blank" class="social-link">
+                <i class="fab fa-facebook"></i> Facebook
+            </a>
+            <a href="https://instagram.com/klikkauskauppa" target="_blank" class="social-link">
+                <i class="fab fa-instagram"></i> Instagram
+            </a>
+            <a href="https://twitter.com/klikkauskauppa" target="_blank" class="social-link">
+                <i class="fab fa-twitter"></i> Twitter
+            </a>
+        </div>
     </footer>
 </body>
 </html>
