--- a/verkkokauppa/templates/verkkokauppa/products.html
+++ b/verkkokauppa/templates/verkkokauppa/products.html
@@ -5,7 +5,9 @@
     <div class="product-grid">
         {% for product in products %}
         <a href="{% url 'verkkokauppa:product_detail' product.id %}" class="product-card">
-            <img src="{{ product.image.url }}">
+            {% if product.image %}
+                <img src="{{ product.image.url }}" alt="{{ product.name }}">
+            {% endif %}
             <h3>{{ product.name }} {{ product.price }}€</h3>
         </a>
         {% empty %}
