--- a/verkkokauppa/templates/verkkokauppa/info.html
+++ b/verkkokauppa/templates/verkkokauppa/info.html
@@ -11,7 +11,7 @@
         <div class="info-section main-info">
             <h2><i class="fas fa-store"></i> Tietoa meistä</h2>
             <div class="info-content">
-                <p>Verkkokauppa on perustettu vuonna 2024 intohimosta tarjota asiakkaillemme parhaita tuotteita kilpailukykyiseen hintaan. Olemme kasvaneet nopeasti yhdeksi Suomen luotetuimmista verkkokaupoista.</p>
+                <p>Tervetuloa Klikkauskauppaan! Olemme vuonna 2024 perustettu innovatiivinen verkkokauppa, joka keskittyy tarjoamaan laadukkaita tuotteita kilpailukykyiseen hintaan. Meillä on laaja valikoima erilaisia tuotteita, jotka sopivat jokaisen tarpeisiin.</p>
                 <p>Meille tärkeintä on asiakastyytyväisyys ja laadukas palvelu. Kaikki tuotteemme ovat tarkoin valittuja ja testattuja.</p>
                 <p>Haluamme olla edelläkävijä verkkokaupan alalla ja kehitämme jatkuvasti palveluitamme asiakkaidemme toiveiden mukaisesti.</p>
             </div>
