--- a/users/templates/registration/logout.html
+++ b/users/templates/registration/logout.html
@@ -1,10 +1,21 @@
 {% extends 'verkkokauppa/base.html' %}
+{% load static %}
+
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/logout.css' %}">
+{% endblock %}
 
 {% block content %}
-    <h2>Haluatko varmasti kirjautua ulos?</h2>
-    <form method="post">
-        {% csrf_token %}
-        <button type="submit">Kyllä, kirjaudu ulos</button>
-        <a href="{% url 'verkkokauppa:home' %}">Peruuta</a>
-    </form>
+<div class="logout-container">
+    <div class="logout-box">
+        <h2>Haluatko varmasti kirjautua ulos?</h2>
+        <form method="post" class="logout-form">
+            {% csrf_token %}
+            <div class="button-group">
+                <button type="submit" class="btn-logout">Kyllä, kirjaudu ulos</button>
+                <a href="{% url 'verkkokauppa:home' %}" class="btn-cancel">Peruuta</a>
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock content %}
